<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">shadow_service_demo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="startservice">start service</string>
    <string name="stopservice">stop service</string>
    <string name="bindservice">bind service</string>
    <string name="unbindservice">unbind service</string>
    <string name="startandbindservice">start &#38; bind service</string>
    <string name="stopandunbindservice">stop &#38; unbind service</string>
    <string name="toast_service_start">service start!</string>
    <string name="toast_service_destroy">service destroy!</string>

</resources>
